Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -765,14 +765,251 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3. Univariate analysis - non-graphical"
+     "### 3.3. Univariate analysis - non-graphical"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "see Univariate and Multivariate Analysis [Notebook] -Univariate Analysis: Non-Graphical \n"
+    "3.3.1 Descriptive statistics of each feature:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <th>Low_Price</th>\n",
+       "      <th>High_Price</th>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <th>Total_Kg_Sold</th>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>40.460912</td>\n",
+       "      <td>174.307377</td>\n",
+       "      <td>215.648053</td>\n",
+       "      <td>20053.533811</td>\n",
+       "      <td>174.510758</td>\n",
+       "      <td>2960.176332</td>\n",
+       "      <td>408.393955</td>\n",
+       "      <td>6.778893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>99.655169</td>\n",
+       "      <td>373.553578</td>\n",
+       "      <td>433.546159</td>\n",
+       "      <td>39005.069445</td>\n",
+       "      <td>308.810797</td>\n",
+       "      <td>6097.416527</td>\n",
+       "      <td>724.450582</td>\n",
+       "      <td>2.248744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>219.600000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>5.460000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>108.000000</td>\n",
+       "      <td>5495.000000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>853.500000</td>\n",
+       "      <td>126.500000</td>\n",
+       "      <td>6.670000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>18.300000</td>\n",
+       "      <td>127.250000</td>\n",
+       "      <td>160.000000</td>\n",
+       "      <td>21082.500000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>3093.525000</td>\n",
+       "      <td>468.000000</td>\n",
+       "      <td>8.280000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>400.000000</td>\n",
+       "      <td>2300.000000</td>\n",
+       "      <td>3300.000000</td>\n",
+       "      <td>369464.000000</td>\n",
+       "      <td>4237.000000</td>\n",
+       "      <td>74000.000000</td>\n",
+       "      <td>6400.000000</td>\n",
+       "      <td>21.240000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Weight_Kg    Low_Price   High_Price    Sales_Total  Total_Qty_Sold  \\\n",
+       "count  1952.000000  1952.000000  1952.000000    1952.000000     1952.000000   \n",
+       "mean     40.460912   174.307377   215.648053   20053.533811      174.510758   \n",
+       "std      99.655169   373.553578   433.546159   39005.069445      308.810797   \n",
+       "min       3.000000     2.000000     5.000000       5.000000        1.000000   \n",
+       "25%       9.000000    50.000000    60.000000    1325.000000       12.000000   \n",
+       "50%      12.000000    80.000000   108.000000    5495.000000       64.000000   \n",
+       "75%      18.300000   127.250000   160.000000   21082.500000      200.000000   \n",
+       "max     400.000000  2300.000000  3300.000000  369464.000000     4237.000000   \n",
+       "\n",
+       "       Total_Kg_Sold  Stock_On_Hand  avg_price_per_kg  \n",
+       "count    1952.000000    1952.000000       1952.000000  \n",
+       "mean     2960.176332     408.393955          6.778893  \n",
+       "std      6097.416527     724.450582          2.248744  \n",
+       "min         3.000000       0.000000          0.250000  \n",
+       "25%       219.600000       9.000000          5.460000  \n",
+       "50%       853.500000     126.500000          6.670000  \n",
+       "75%      3093.525000     468.000000          8.280000  \n",
+       "max     74000.000000    6400.000000         21.240000  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.3.2 Calculating the Kurtosis and Skew of the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Weight_Kg           3.328254\n",
+       "Low_Price           4.222672\n",
+       "High_Price          3.828819\n",
+       "Sales_Total         4.250317\n",
+       "Total_Qty_Sold      4.445169\n",
+       "Total_Kg_Sold       5.529586\n",
+       "Stock_On_Hand       3.391815\n",
+       "avg_price_per_kg    0.082452\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set.skew()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe that all the feautures are highly skewed in the positive direction except for the average price per kg(which is moderately skewed in a positive direction). For the high positive skewed feautures we have that mode<median< mean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Weight_Kg            9.109698\n",
+       "Low_Price           17.073369\n",
+       "High_Price          13.630768\n",
+       "Sales_Total         24.200524\n",
+       "Total_Qty_Sold      32.338123\n",
+       "Total_Kg_Sold       45.153801\n",
+       "Stock_On_Hand       14.671224\n",
+       "avg_price_per_kg     1.042921\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set.kurtosis()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above , we observe that all the feautures have a high kurtosis besides the average price per kg. This indicates that all the feautures have a large number of outliers except for the average price."
    ]
   },
   {
