Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -23,7 +23,7 @@
     "    2. Khomotso Maake\n",
     "    3. Jacques Stanjaak\n",
     "    4. Harrison Hlongwane\n",
-    "    5. Bhalisa Sondo\n",
+    "    5. Bhalisa Sodo\n",
     "    "
    ]
   },
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   "## 1. Introduction <a name=\"introduction\"></a>\n",
+    "## 1. Introduction <a name=\"introduction\"></a>\n",
     "There are various factors that contribute to the performance of a business.  Decisions to improve the performance have to be made given the known knowledge. In this project we are given data of Golden Delicious Apples and some parameters and will be  constructing a regression algorithm that will accurately predict how much a kilogram of the Apples will cost.\n"
    ]
   },
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   "#### 2.4. Make an initial plot of the data"
+    "#### 2.4. Make an initial plot of the data"
    ]
   },
   {
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "### 3.3. Univariate analysis - non-graphical"
+    "### 3.3. Univariate analysis - non-graphical"
    ]
   },
   {
