--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,321 +327,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1952, 13)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#The dataframe has 1952 rows and 13 columns.\n",
-    "train_set.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1952 entries, 1 to 64310\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   Province          1952 non-null   object \n",
-      " 1   Container         1952 non-null   object \n",
-      " 2   Size_Grade        1952 non-null   object \n",
-      " 3   Weight_Kg         1952 non-null   float64\n",
-      " 4   Commodities       1952 non-null   object \n",
-      " 5   Date              1952 non-null   object \n",
-      " 6   Low_Price         1952 non-null   float64\n",
-      " 7   High_Price        1952 non-null   float64\n",
-      " 8   Sales_Total       1952 non-null   float64\n",
-      " 9   Total_Qty_Sold    1952 non-null   int64  \n",
-      " 10  Total_Kg_Sold     1952 non-null   float64\n",
-      " 11  Stock_On_Hand     1952 non-null   int64  \n",
-      " 12  avg_price_per_kg  1952 non-null   float64\n",
-      "dtypes: float64(6), int64(2), object(5)\n",
-      "memory usage: 213.5+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "#The info method displays the nature of our data i.e datatypes and non-null count.\n",
-    "train_set.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The info summary above shows 1952 entries and it has the following data types: six float type data, two integer type data, five object type data. All columns showing zero null values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Weight_Kg</th>\n",
-       "      <th>Low_Price</th>\n",
-       "      <th>High_Price</th>\n",
-       "      <th>Sales_Total</th>\n",
-       "      <th>Total_Qty_Sold</th>\n",
-       "      <th>Total_Kg_Sold</th>\n",
-       "      <th>Stock_On_Hand</th>\n",
-       "      <th>avg_price_per_kg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "      <td>1952.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>40.460912</td>\n",
-       "      <td>174.307377</td>\n",
-       "      <td>215.648053</td>\n",
-       "      <td>20053.533811</td>\n",
-       "      <td>174.510758</td>\n",
-       "      <td>2960.176332</td>\n",
-       "      <td>408.393955</td>\n",
-       "      <td>6.778893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>99.655169</td>\n",
-       "      <td>373.553578</td>\n",
-       "      <td>433.546159</td>\n",
-       "      <td>39005.069445</td>\n",
-       "      <td>308.810797</td>\n",
-       "      <td>6097.416527</td>\n",
-       "      <td>724.450582</td>\n",
-       "      <td>2.248744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>1325.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>219.600000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>5.460000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>108.000000</td>\n",
-       "      <td>5495.000000</td>\n",
-       "      <td>64.000000</td>\n",
-       "      <td>853.500000</td>\n",
-       "      <td>126.500000</td>\n",
-       "      <td>6.670000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>18.300000</td>\n",
-       "      <td>127.250000</td>\n",
-       "      <td>160.000000</td>\n",
-       "      <td>21082.500000</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>3093.525000</td>\n",
-       "      <td>468.000000</td>\n",
-       "      <td>8.280000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>400.000000</td>\n",
-       "      <td>2300.000000</td>\n",
-       "      <td>3300.000000</td>\n",
-       "      <td>369464.000000</td>\n",
-       "      <td>4237.000000</td>\n",
-       "      <td>74000.000000</td>\n",
-       "      <td>6400.000000</td>\n",
-       "      <td>21.240000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Weight_Kg    Low_Price   High_Price    Sales_Total  Total_Qty_Sold  \\\n",
-       "count  1952.000000  1952.000000  1952.000000    1952.000000     1952.000000   \n",
-       "mean     40.460912   174.307377   215.648053   20053.533811      174.510758   \n",
-       "std      99.655169   373.553578   433.546159   39005.069445      308.810797   \n",
-       "min       3.000000     2.000000     5.000000       5.000000        1.000000   \n",
-       "25%       9.000000    50.000000    60.000000    1325.000000       12.000000   \n",
-       "50%      12.000000    80.000000   108.000000    5495.000000       64.000000   \n",
-       "75%      18.300000   127.250000   160.000000   21082.500000      200.000000   \n",
-       "max     400.000000  2300.000000  3300.000000  369464.000000     4237.000000   \n",
-       "\n",
-       "       Total_Kg_Sold  Stock_On_Hand  avg_price_per_kg  \n",
-       "count    1952.000000    1952.000000       1952.000000  \n",
-       "mean     2960.176332     408.393955          6.778893  \n",
-       "std      6097.416527     724.450582          2.248744  \n",
-       "min         3.000000       0.000000          0.250000  \n",
-       "25%       219.600000       9.000000          5.460000  \n",
-       "50%       853.500000     126.500000          6.670000  \n",
-       "75%      3093.525000     468.000000          8.280000  \n",
-       "max     74000.000000    6400.000000         21.240000  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Summary statistic of each column in the dataframe.\n",
-    "train_set.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.3.2. How the  testing data differs from training data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our Test_set data has 685 rows and 13 columns, our rows are smaller than the train datawhich is expected as the bulk of our data will go into training our model.\n",
-    "\n",
-    "The data types also differ in our test data, we have :five float type data, three integer type data, five object type data. All columns showing zero null values.In the training data there are six float type and two integer type data.\n",
-    "\n",
-    "Test_set statistics vary from train_set ones as we are working with a smaller data set in our test data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After veiwing our data, we viewed the sample submission as well to confirm our response variable as the column to feed the submission file on Kaggle."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Index</th>\n",
-       "      <th>avg_price_per_kg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1.30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Index  avg_price_per_kg\n",
-       "0      1             13.94\n",
-       "1      2              1.30"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_submission.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -755,10 +440,211 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1952, 13)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The dataframe has 1952 rows and 13 columns.\n",
+    "train_set.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1952 entries, 1 to 64310\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Province          1952 non-null   object \n",
+      " 1   Container         1952 non-null   object \n",
+      " 2   Size_Grade        1952 non-null   object \n",
+      " 3   Weight_Kg         1952 non-null   float64\n",
+      " 4   Commodities       1952 non-null   object \n",
+      " 5   Date              1952 non-null   object \n",
+      " 6   Low_Price         1952 non-null   float64\n",
+      " 7   High_Price        1952 non-null   float64\n",
+      " 8   Sales_Total       1952 non-null   float64\n",
+      " 9   Total_Qty_Sold    1952 non-null   int64  \n",
+      " 10  Total_Kg_Sold     1952 non-null   float64\n",
+      " 11  Stock_On_Hand     1952 non-null   int64  \n",
+      " 12  avg_price_per_kg  1952 non-null   float64\n",
+      "dtypes: float64(6), int64(2), object(5)\n",
+      "memory usage: 213.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The info method displays the nature of our data i.e datatypes and non-null count.\n",
+    "train_set.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The info summary above shows 1952 entries and it has the following data types: six float type data, two integer type data, five object type data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3.1.1. How the  testing data differs from training data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our Test_set data has 685 rows and 13 columns, our rows are smaller than the train datawhich is expected as the bulk of our data will go into training our model.\n",
+    "\n",
+    "The data types also differ in our test data, we have :five float type data, three integer type data, five object type data. All columns showing zero null values.In the training data there are six float type and two integer type data.\n",
+    "\n",
+    "Test_set statistics vary from train_set ones as we are working with a smaller data set in our test data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3.1.2 Viewing Sample_Submission**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After veiwing our data, we viewed the sample submission as well to confirm our response variable as the column to feed the submission file on Kaggle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Index  avg_price_per_kg\n",
+       "0      1             13.94\n",
+       "1      2              1.30"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_submission.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 3.2. Look for null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Province            0\n",
+       "Container           0\n",
+       "Size_Grade          0\n",
+       "Weight_Kg           0\n",
+       "Commodities         0\n",
+       "Date                0\n",
+       "Low_Price           0\n",
+       "High_Price          0\n",
+       "Sales_Total         0\n",
+       "Total_Qty_Sold      0\n",
+       "Total_Kg_Sold       0\n",
+       "Stock_On_Hand       0\n",
+       "avg_price_per_kg    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our data set after filter for the Apple Golden Delicious has zero null values."
    ]
   },
   {
@@ -1016,7 +902,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "### 3.4. Univariate analysis - graphical\n"
+    "### 3.4. Univariate analysis - graphical\n"
    ]
   },
   {
@@ -1172,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-"### 3.6. Multivariate analysis - graphical "
+    "### 3.6. Multivariate analysis - graphical "
    ]
   },
   {
@@ -1230,12 +1116,10 @@
     "We observe that apples with a lower average price has a higher weight. We also observe that a lot of the apples which are sold have a low weight."
    ]
   },
-
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "## 4. Testing the suitability of the data\n",
     "### 4.1. Testing for linearity\n",
     "\n",
@@ -2163,7 +2047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When I use all the Columns (179) from train, the dataframe that has our categorical values converted. I get an error that some column are not defined. So I reduced the 179 to work with 13. I got the error that Province W was not defined, so I will be dropping it and recreate my string. These errors only show up when I am constructing the model."
+    "When I use all the Columns (179) from train, the dataframe that has our categorical values converted. I get this error:\"PatsyError:numbers besides '0' and '1' are only allowed with**\" . So I reduced the 179 to work with 13. I got the error that Province W was not defined, so I will be dropping it and recreate my string. These errors only show up when I am constructing the model."
    ]
   },
   {
