Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -1058,9 +1058,200 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3.5. Multivariate analysis - non-graphical\n",
+    "We now examine the Pearson correlation between two variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <th>Low_Price</th>\n",
+       "      <th>High_Price</th>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <th>Total_Kg_Sold</th>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.863182</td>\n",
+       "      <td>0.905852</td>\n",
+       "      <td>0.180518</td>\n",
+       "      <td>-0.133317</td>\n",
+       "      <td>0.294117</td>\n",
+       "      <td>-0.144105</td>\n",
+       "      <td>-0.337886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Low_Price</th>\n",
+       "      <td>0.863182</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.938140</td>\n",
+       "      <td>0.183230</td>\n",
+       "      <td>-0.122823</td>\n",
+       "      <td>0.269744</td>\n",
+       "      <td>-0.127677</td>\n",
+       "      <td>-0.141740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High_Price</th>\n",
+       "      <td>0.905852</td>\n",
+       "      <td>0.938140</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.265672</td>\n",
+       "      <td>-0.096456</td>\n",
+       "      <td>0.372282</td>\n",
+       "      <td>-0.094174</td>\n",
+       "      <td>-0.164496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <td>0.180518</td>\n",
+       "      <td>0.183230</td>\n",
+       "      <td>0.265672</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.771865</td>\n",
+       "      <td>0.962338</td>\n",
+       "      <td>0.284693</td>\n",
+       "      <td>0.108473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <td>-0.133317</td>\n",
+       "      <td>-0.122823</td>\n",
+       "      <td>-0.096456</td>\n",
+       "      <td>0.771865</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.651440</td>\n",
+       "      <td>0.390168</td>\n",
+       "      <td>0.087536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_Kg_Sold</th>\n",
+       "      <td>0.294117</td>\n",
+       "      <td>0.269744</td>\n",
+       "      <td>0.372282</td>\n",
+       "      <td>0.962338</td>\n",
+       "      <td>0.651440</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.229062</td>\n",
+       "      <td>-0.001007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <td>-0.144105</td>\n",
+       "      <td>-0.127677</td>\n",
+       "      <td>-0.094174</td>\n",
+       "      <td>0.284693</td>\n",
+       "      <td>0.390168</td>\n",
+       "      <td>0.229062</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.105028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "      <td>-0.337886</td>\n",
+       "      <td>-0.141740</td>\n",
+       "      <td>-0.164496</td>\n",
+       "      <td>0.108473</td>\n",
+       "      <td>0.087536</td>\n",
+       "      <td>-0.001007</td>\n",
+       "      <td>0.105028</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Weight_Kg  Low_Price  High_Price  Sales_Total  \\\n",
+       "Weight_Kg          1.000000   0.863182    0.905852     0.180518   \n",
+       "Low_Price          0.863182   1.000000    0.938140     0.183230   \n",
+       "High_Price         0.905852   0.938140    1.000000     0.265672   \n",
+       "Sales_Total        0.180518   0.183230    0.265672     1.000000   \n",
+       "Total_Qty_Sold    -0.133317  -0.122823   -0.096456     0.771865   \n",
+       "Total_Kg_Sold      0.294117   0.269744    0.372282     0.962338   \n",
+       "Stock_On_Hand     -0.144105  -0.127677   -0.094174     0.284693   \n",
+       "avg_price_per_kg  -0.337886  -0.141740   -0.164496     0.108473   \n",
+       "\n",
+       "                  Total_Qty_Sold  Total_Kg_Sold  Stock_On_Hand  \\\n",
+       "Weight_Kg              -0.133317       0.294117      -0.144105   \n",
+       "Low_Price              -0.122823       0.269744      -0.127677   \n",
+       "High_Price             -0.096456       0.372282      -0.094174   \n",
+       "Sales_Total             0.771865       0.962338       0.284693   \n",
+       "Total_Qty_Sold          1.000000       0.651440       0.390168   \n",
+       "Total_Kg_Sold           0.651440       1.000000       0.229062   \n",
+       "Stock_On_Hand           0.390168       0.229062       1.000000   \n",
+       "avg_price_per_kg        0.087536      -0.001007       0.105028   \n",
+       "\n",
+       "                  avg_price_per_kg  \n",
+       "Weight_Kg                -0.337886  \n",
+       "Low_Price                -0.141740  \n",
+       "High_Price               -0.164496  \n",
+       "Sales_Total               0.108473  \n",
+       "Total_Qty_Sold            0.087536  \n",
+       "Total_Kg_Sold            -0.001007  \n",
+       "Stock_On_Hand             0.105028  \n",
+       "avg_price_per_kg          1.000000  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe that there is a strong relationship(Strong Positive Correlation) between the following variables only:\n",
+    "1. Weight and High price\n",
+    "2. Total Sales and Total Kg Sold \n",
+    "3. Weight and Low Price\n",
+    "\n"
+   ]
+  },
+
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.6. Multivariate analysis - graphical "
    ]
   },
+  
   {
    "cell_type": "markdown",
    "metadata": {},
