Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -75,20 +75,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2. Parameters\n",
-    "1. Month/Season\n",
-    "2. Distance travelled\n",
-    "3. Supplier cost\n",
-    "4. Grade of apple\n",
-    "5. Demand and Supply\n",
-    "6. Container used?\n",
-    "7. Brand of the apple\n",
-    "8. How ripe/mature the apple is\n",
-    "9. The size of the apple\n",
-    "10. Marketing methods used\n",
-    "11. Competition in the market\n",
-    "12. Cost of apple seedlings\n",
-    "\n"
+    "## Parameters:\n",
+    "1. Province - Which province the produce was grown\n",
+    "2. Container - The code for the type of container\n",
+    "3. Size_Grade - The class of the produce according to their quality\n",
+    "4. Weight_Kg - The total weight in kilograms\n",
+    "5. Commodities - The type of produce, e.g. Golden Delicious Apples\n",
+    "6. Date - The date of the sale\n",
+    "7. Sales_Total - The total sales price\n",
+    "8. Total_Qty_Sold - The number of produce sold\n",
+    "9. Total_Kg_Sold - The total weight of the produce sold in kilograms\n",
+    "10. Stock_On_Hand - The amount of produce the store has"
    ]
   },
   {
