--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -2450,6 +2450,272 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Variable Selection by Correlation and Significance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <th>Low_Price</th>\n",
+       "      <th>High_Price</th>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <th>Total_Kg_Sold</th>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "      <th>Province_CAPE</th>\n",
+       "      <th>Province_EASTERN_CAPE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Date_2020-09-07</th>\n",
+       "      <th>Date_2020-09-09</th>\n",
+       "      <th>Date_2020-09-16</th>\n",
+       "      <th>Date_2020-09-17</th>\n",
+       "      <th>Date_2020-09-19</th>\n",
+       "      <th>Date_2020-09-21</th>\n",
+       "      <th>Date_2020-09-23</th>\n",
+       "      <th>Date_2020-09-28</th>\n",
+       "      <th>Date_2020-10-01</th>\n",
+       "      <th>Date_2020-10-03</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18.3</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>51710.0</td>\n",
+       "      <td>332</td>\n",
+       "      <td>6075.6</td>\n",
+       "      <td>822</td>\n",
+       "      <td>8.51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>320</td>\n",
+       "      <td>3520.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>990.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>6.11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>18.3</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>32020.0</td>\n",
+       "      <td>388</td>\n",
+       "      <td>7100.4</td>\n",
+       "      <td>443</td>\n",
+       "      <td>4.51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>400.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 184 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Weight_Kg  Low_Price  High_Price  Sales_Total  Total_Qty_Sold  \\\n",
+       "1        18.3      150.0       170.0      51710.0             332   \n",
+       "7        11.0       50.0        50.0      16000.0             320   \n",
+       "24        9.0       55.0        55.0        990.0              18   \n",
+       "40       18.3       80.0       120.0      32020.0             388   \n",
+       "69      400.0     1800.0      1800.0       1800.0               1   \n",
+       "\n",
+       "    Total_Kg_Sold  Stock_On_Hand  avg_price_per_kg  Province_CAPE  \\\n",
+       "1          6075.6            822              8.51              1   \n",
+       "7          3520.0              0              4.55              1   \n",
+       "24          162.0           1506              6.11              0   \n",
+       "40         7100.4            443              4.51              1   \n",
+       "69          400.0              2              4.50              0   \n",
+       "\n",
+       "    Province_EASTERN_CAPE  ...  Date_2020-09-07  Date_2020-09-09  \\\n",
+       "1                       0  ...                0                1   \n",
+       "7                       0  ...                0                0   \n",
+       "24                      0  ...                0                0   \n",
+       "40                      0  ...                0                0   \n",
+       "69                      1  ...                0                0   \n",
+       "\n",
+       "    Date_2020-09-16  Date_2020-09-17  Date_2020-09-19  Date_2020-09-21  \\\n",
+       "1                 0                0                0                0   \n",
+       "7                 0                0                0                0   \n",
+       "24                0                0                0                0   \n",
+       "40                0                0                0                0   \n",
+       "69                0                0                0                0   \n",
+       "\n",
+       "    Date_2020-09-23  Date_2020-09-28  Date_2020-10-01  Date_2020-10-03  \n",
+       "1                 0                0                0                0  \n",
+       "7                 0                0                0                0  \n",
+       "24                0                0                0                0  \n",
+       "40                0                0                0                0  \n",
+       "69                0                1                0                0  \n",
+       "\n",
+       "[5 rows x 184 columns]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set_dummies = pd.get_dummies(train_set)\n",
+    "\n",
+    "# Again we make sure that all the column names have underscores instead of whitespaces\n",
+    "train_set_dummies.columns = [col.replace(\" \",\"_\") for col in train_set_dummies]\n",
+    "\n",
+    "train_set_dummies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1952, 184)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set_dummies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_titles = [col for col in train_set_dummies.columns if col!= 'avg_price_per_kg'] + ['avg_price_per_kg']\n",
+    "train_set_dummies=train_set_dummies.reindex(columns=column_titles)\n"
+   ]
+  },
+
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Conclusion <a name=\"conclude\"></a>"
    ]
   },
