Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -2711,6 +2711,106 @@
     "train_set_dummies=train_set_dummies.reindex(columns=column_titles)\n"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate correlations between predictor variables and the response variable\n",
+    "corrs = train_set_dummies.corr()['avg_price_per_kg'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formula:\n",
+      "\t avg_price_per_kg ~ Weight_Kg + Low_Price + High_Price + Sales_Total + Total_Qty_Sold + Total_Kg_Sold + Stock_On_Hand + Province_CAPE + Province_EASTERN_CAPE + Province_NATAL + Province_ORANGE_FREE_STATE + Province_TRANSVAAL + Province_W.CAPE-BERGRIVER_ETC + Province_WEST_COAST + Container_AC030 + Container_DT063 + Container_EC120 + Container_EF120 + Container_EG140 + Container_IA400 + Container_JE090 + Container_JG110 + Container_M4183 + Container_M6125 + Container_M9125 + Size_Grade_1L + Size_Grade_1M + Size_Grade_1S + Size_Grade_1U + Size_Grade_1X + Size_Grade_2L + Size_Grade_2M + Size_Grade_2S + Size_Grade_2U + Size_Grade_2X + Commodities_APPLE_GOLDEN_DELICIOUS + Date_2019-12-11 + Date_2019-12-12 + Date_2019-12-14 + Date_2019-12-23 + Date_2019-12-30 + Date_2020-01-02 + Date_2020-01-03 + Date_2020-01-04 + Date_2020-01-06 + Date_2020-01-08 + Date_2020-01-09 + Date_2020-01-10 + Date_2020-01-11 + Date_2020-01-13 + Date_2020-01-14 + Date_2020-01-16 + Date_2020-01-20 + Date_2020-01-21 + Date_2020-01-23 + Date_2020-01-24 + Date_2020-01-28 + Date_2020-01-30 + Date_2020-02-01 + Date_2020-02-03 + Date_2020-02-05 + Date_2020-02-06 + Date_2020-02-08 + Date_2020-02-10 + Date_2020-02-11 + Date_2020-02-12 + Date_2020-02-14 + Date_2020-02-15 + Date_2020-02-19 + Date_2020-02-21 + Date_2020-02-22 + Date_2020-02-25 + Date_2020-02-26 + Date_2020-02-27 + Date_2020-03-04 + Date_2020-03-05 + Date_2020-03-09 + Date_2020-03-10 + Date_2020-03-11 + Date_2020-03-12 + Date_2020-03-13 + Date_2020-03-14 + Date_2020-03-16 + Date_2020-03-17 + Date_2020-03-20 + Date_2020-03-23 + Date_2020-03-25 + Date_2020-03-27 + Date_2020-03-30 + Date_2020-03-31 + Date_2020-04-01 + Date_2020-04-06 + Date_2020-04-07 + Date_2020-04-09 + Date_2020-04-14 + Date_2020-04-15 + Date_2020-04-16 + Date_2020-04-17 + Date_2020-04-21 + Date_2020-04-22 + Date_2020-04-23 + Date_2020-04-28 + Date_2020-04-29 + Date_2020-04-30 + Date_2020-05-04 + Date_2020-05-05 + Date_2020-05-06 + Date_2020-05-07 + Date_2020-05-09 + Date_2020-05-13 + Date_2020-05-14 + Date_2020-05-18 + Date_2020-05-19 + Date_2020-05-22 + Date_2020-05-25 + Date_2020-05-26 + Date_2020-05-27 + Date_2020-05-29 + Date_2020-06-01 + Date_2020-06-02 + Date_2020-06-03 + Date_2020-06-08 + Date_2020-06-09 + Date_2020-06-12 + Date_2020-06-13 + Date_2020-06-17 + Date_2020-06-18 + Date_2020-06-19 + Date_2020-06-22 + Date_2020-06-24 + Date_2020-06-25 + Date_2020-06-27 + Date_2020-07-01 + Date_2020-07-06 + Date_2020-07-07 + Date_2020-07-08 + Date_2020-07-09 + Date_2020-07-10 + Date_2020-07-13 + Date_2020-07-14 + Date_2020-07-15 + Date_2020-07-16 + Date_2020-07-17 + Date_2020-07-18 + Date_2020-07-20 + Date_2020-07-21 + Date_2020-07-22 + Date_2020-07-23 + Date_2020-07-25 + Date_2020-07-27 + Date_2020-07-28 + Date_2020-07-29 + Date_2020-07-30 + Date_2020-07-31 + Date_2020-08-03 + Date_2020-08-04 + Date_2020-08-05 + Date_2020-08-06 + Date_2020-08-11 + Date_2020-08-12 + Date_2020-08-13 + Date_2020-08-14 + Date_2020-08-15 + Date_2020-08-18 + Date_2020-08-19 + Date_2020-08-20 + Date_2020-08-24 + Date_2020-08-25 + Date_2020-08-27 + Date_2020-08-31 + Date_2020-09-01 + Date_2020-09-02 + Date_2020-09-03 + Date_2020-09-07 + Date_2020-09-09 + Date_2020-09-16 + Date_2020-09-17 + Date_2020-09-19 + Date_2020-09-21 + Date_2020-09-23 + Date_2020-09-28 + Date_2020-10-01 + Date_2020-10-03\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "# Model DataFrame with all of the columns:\n",
+    "dfm = train_set_dummies.copy()\n",
+    "\n",
+    "# The dependent variable:\n",
+    "y_name = 'avg_price_per_kg'\n",
+    "# The independent variable\n",
+    "# (let's first try all of the columns in the model DataFrame)\n",
+    "X_names = [col for col in dfm.columns if col != y_name]\n",
+    "\n",
+    "# Build the OLS formula string \" y ~ X \"\n",
+    "formula_str = y_name+\" ~ \"+\" + \".join(X_names);\n",
+    "print('Formula:\\n\\t {}'.format(formula_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:       avg_price_per_kg   R-squared:                       0.459\n",
+      "Model:                            OLS   Adj. R-squared:                  0.456\n",
+      "Method:                 Least Squares   F-statistic:                     137.3\n",
+      "Date:                Thu, 13 May 2021   Prob (F-statistic):          1.46e-248\n",
+      "Time:                        22:34:41   Log-Likelihood:                -3750.7\n",
+      "No. Observations:                1952   AIC:                             7527.\n",
+      "Df Residuals:                    1939   BIC:                             7600.\n",
+      "Df Model:                          12                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================================\n",
+      "                                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------------------\n",
+      "Intercept                      7.3580      0.060    122.322      0.000       7.240       7.476\n",
+      "Weight_Kg                     -0.0156      0.001    -15.881      0.000      -0.017      -0.014\n",
+      "Low_Price                      0.0002      0.000      0.497      0.620      -0.000       0.001\n",
+      "High_Price                     0.0023      0.000      6.815      0.000       0.002       0.003\n",
+      "Sales_Total                    0.0001   5.14e-06     20.975      0.000    9.78e-05       0.000\n",
+      "Total_Qty_Sold                -0.0034      0.000    -13.741      0.000      -0.004      -0.003\n",
+      "Total_Kg_Sold                 -0.0006   2.87e-05    -19.394      0.000      -0.001      -0.000\n",
+      "Stock_On_Hand              -8.621e-05   5.82e-05     -1.481      0.139      -0.000    2.79e-05\n",
+      "Province_EASTERN_CAPE         -1.5629      0.127    -12.298      0.000      -1.812      -1.314\n",
+      "Province_NATAL                -2.5706      0.179    -14.399      0.000      -2.921      -2.221\n",
+      "Province_ORANGE_FREE_STATE    -1.4851      0.555     -2.674      0.008      -2.574      -0.396\n",
+      "Province_TRANSVAAL            -0.1001      0.437     -0.229      0.819      -0.957       0.756\n",
+      "Province_WEST_COAST           -0.5155      0.157     -3.289      0.001      -0.823      -0.208\n",
+      "==============================================================================\n",
+      "Omnibus:                      207.556   Durbin-Watson:                   1.954\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              692.358\n",
+      "Skew:                           0.515   Prob(JB):                    4.53e-151\n",
+      "Kurtosis:                       5.730   Cond. No.                     6.56e+05\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 6.56e+05. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit the model using the model dataframe\n",
+    "model=ols(formula=formula_str, data=dfm)\n",
+    "fitted = model.fit()\n",
+    "\n",
+    "# Output the fitted summary\n",
+    "print(fitted.summary())"
+   ]
+  },
 
   {
    "cell_type": "markdown",
